--- a/myAppiumProject/pom.xml
+++ b/myAppiumProject/pom.xml
@@ -52,7 +52,15 @@
 			<artifactId>gherkin</artifactId>
 			<version>2.12.2</version>
 			<scope>test</scope>
-		</dependency> 
+		</dependency>
+		
+		<!-- Dependencies to capture toast -->
+
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>tesseract</artifactId>
+			<version>3.03-rc1-0.11</version>
+		</dependency>
 
 	</dependencies>
 </project>
